2016-01-20  Peter Stephenson  <p.stephenson@samsung.com>

	* unspoted: Config/version.mk: incremented version to 5.2-dev-1
	because of parsing change.

2016-01-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37666: Completion/Unix/Command/_git: Completion: git:
	'send-email --smtp-server=' takes absolute path to sendmail.

	* 37665: Completion/Unix/Command/_git,
	Completion/Unix/Type/_absolute_command_paths, Doc/Zsh/compsys.yo:
	Completion: New helper _absolute_command_paths.

	* 37664: Completion/Unix/Type/_path_commands, Doc/Zsh/compsys.yo:
	docs: Document the completion function _command_names.

2016-01-19  Peter Stephenson  <p.stephenson@samsung.com>

	* 37693: Src/glob.c: turn Dash into '-' in glob qualifiers.

	* 37689: README, Src/glob.c, Src/lex.c, Src/pattern.c,
	Src/zsh.h, Test/D02glob.ztst: also ! and ^ need to be tokenised
	in character set.

2016-01-18  Barton E. Schaefer  <schaefer@zsh.org>

	* 37682: Src/lex.c: when SH_GLOB is set (e.g. in "sh" emulation)
	do not parse bare parentheses in arguments as a pattern grouping.

2016-01-18  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 37678: Src/glob.c, Src/lex.c, Src/pattern.c, Src/utils.c,
	Src/zsh.h, Test/D02glob.ztst: Now possible to quote "-" in
	a pattern range.

	* 37634: Completion/Unix/Command/_man: _man: Support subsection
	names such as '3p'.

	* 37634: Completion/Unix/Command/_man: _man: Disentangle a local
	variable that had two distinct semantics. No functional change

	* 37663: Completion/Unix/Command/_bibtex: New bibtex completion
	(very minimal).

	* unposted: Doc/Zsh/zle.yo: docs: zshzle(1): Trivial
	clarification to $CONTEXT.

2016-01-15  Peter Stephenson  <p.stephenson@samsung.com>

	* 37646: Src/builtin.c, Test/B02typeset.ztst: typeset should
	return non-zero status on attempt to set readonly variable.

	* 37643: Src/Zle/complist.c: Reset interrupt after getkeycmd()
	in menu selection.

	* 37512: Src/params.c: overeager WARN_CREATE_GLOBAL with
	strftime.
